yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeployment-melih
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: webcontainer
        image: melihselamiurkmez/worldweb:1.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer-melih
spec:
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
